need to fix error in n06, adding outputs to the rest of the notebooks

--- a/scripts/IS_agent/N05_gap_rules.ipynb
+++ b/scripts/IS_agent/N05_gap_rules.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "id": "c1e966a5",
    "metadata": {},
    "outputs": [],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "id": "7f5032a6",
    "metadata": {},
    "outputs": [
@@ -111,6 +111,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Engine initialized with 2 facts\n",
+      "Initial facts: [InitialFact(), RaceStatusFact(lap=1, total_laps=60, race_phase='start', track_status='clear')]\n",
+      "\n",
+      "=== TIRE DEGRADATION ANALYSIS ===\n",
+      "Using first predicted rate as current degradation: 0.07\n",
+      "Tire facts declared: {'degradation': DegradationFact(degradation_rate=0.07, predicted_rates=frozenlist([0.07, 0.09, 0.12])), 'telemetry': TelemetryFact(tire_age=4, compound_id=2, driver_number=44, position=1)}\n",
+      "Engine now has 4 facts\n",
+      "\n",
+      "=== LAP TIME PREDICTION ===\n",
+      "Lap time facts declared: {'telemetry': TelemetryFact(driver_number=44, lap_time=80.3, predicted_lap_time=79.9, compound_id=2, tire_age=4, position=1)}\n",
+      "Engine now has 5 facts\n",
+      "\n",
+      "=== RADIO ANALYSIS ===\n",
+      "Radio fact declared: <f-5>\n",
+      "Engine now has 6 facts\n",
+      "\n",
+      "=== ALL ENGINE FACTS ===\n",
+      "Fact 1: InitialFact - <f-0>\n",
+      "Fact 2: RaceStatusFact - <f-1>\n",
+      "Fact 3: DegradationFact - <f-2>\n",
+      "Fact 4: TelemetryFact - <f-3>\n",
+      "Fact 5: TelemetryFact - <f-4>\n",
+      "Fact 6: RadioFact - <f-5>\n",
       "Libraries and fact classes loaded successfully.\n"
      ]
     }
@@ -182,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "id": "79bc4ada",
    "metadata": {},
    "outputs": [
@@ -315,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "id": "d15914d2",
    "metadata": {},
    "outputs": [],
@@ -433,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "id": "1d2ecfc0",
    "metadata": {},
    "outputs": [
@@ -491,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "id": "81f7d6cf",
    "metadata": {},
    "outputs": [
@@ -594,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "id": "1bb01a9f",
    "metadata": {},
    "outputs": [],
@@ -739,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "id": "b2b5a609",
    "metadata": {},
    "outputs": [],
@@ -986,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "id": "4c35c62a",
    "metadata": {},
    "outputs": [],
@@ -1125,15 +1148,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "id": "f67170b4",
    "metadata": {},
    "outputs": [],
    "source": [
     "# ------------------------------------------------------------------------------------\n",
     "# EXAMPLE TESTS FOR GAP RULES\n",
-    "# ------------------------------------------------------------------------------------\n",
-    "\n"
+    "# ------------------------------------------------------------------------------------"
    ]
   },
   {
@@ -1146,7 +1168,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
+   "id": "f1c6a24a",
    "metadata": {},
    "outputs": [
     {
@@ -1223,7 +1246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "id": "30d440b3",
    "metadata": {},
    "outputs": [
@@ -1305,7 +1328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 13,
    "id": "c65b90b9",
    "metadata": {},
    "outputs": [
@@ -1384,7 +1407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 14,
    "id": "e7397977",
    "metadata": {},
    "outputs": [
@@ -1474,7 +1497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
    "id": "5c366135",
    "metadata": {},
    "outputs": [
@@ -1550,7 +1573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 16,
    "id": "a3543241",
    "metadata": {},
    "outputs": [],
@@ -1922,7 +1945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 17,
    "id": "32803806",
    "metadata": {},
    "outputs": [],
@@ -1969,7 +1992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 18,
    "id": "2a137736",
    "metadata": {},
    "outputs": [
@@ -1983,7 +2006,15 @@
       "INFO:fastf1.fastf1.req:Using cached data for session_info\n",
       "req            INFO \tUsing cached data for driver_info\n",
       "INFO:fastf1.fastf1.req:Using cached data for driver_info\n",
-      "req            INFO \tUsing cached data for session_status_data\n"
+      "req            INFO \tUsing cached data for session_status_data\n",
+      "INFO:fastf1.fastf1.req:Using cached data for session_status_data\n",
+      "req            INFO \tUsing cached data for lap_count\n",
+      "INFO:fastf1.fastf1.req:Using cached data for lap_count\n",
+      "req            INFO \tUsing cached data for track_status_data\n",
+      "INFO:fastf1.fastf1.req:Using cached data for track_status_data\n",
+      "req            INFO \tUsing cached data for _extended_timing_data\n",
+      "INFO:fastf1.fastf1.req:Using cached data for _extended_timing_data\n",
+      "req            INFO \tUsing cached data for timing_app_data\n"
      ]
     },
     {
@@ -1992,7 +2023,7 @@
      "text": [
       "Starting comprehensive gap analysis...\n",
       "=== Gap Analysis for Spain 2023 (R) ===\n",
-      "Started: 2025-04-18 13:52:10\n",
+      "Started: 2025-04-18 17:03:15\n",
       "\n",
       "1. Loading session data...\n"
      ]
@@ -2001,14 +2032,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:fastf1.fastf1.req:Using cached data for session_status_data\n",
-      "req            INFO \tUsing cached data for lap_count\n",
-      "INFO:fastf1.fastf1.req:Using cached data for lap_count\n",
-      "req            INFO \tUsing cached data for track_status_data\n",
-      "INFO:fastf1.fastf1.req:Using cached data for track_status_data\n",
-      "req            INFO \tUsing cached data for _extended_timing_data\n",
-      "INFO:fastf1.fastf1.req:Using cached data for _extended_timing_data\n",
-      "req            INFO \tUsing cached data for timing_app_data\n",
       "INFO:fastf1.fastf1.req:Using cached data for timing_app_data\n",
       "core           INFO \tProcessing timing data...\n",
       "INFO:fastf1.fastf1.core:Processing timing data...\n",
@@ -2028,20 +2051,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   - Session loaded in 0.03 seconds\n",
+      "   - Session loaded in 0.02 seconds\n",
       "   - Loaded 1312 lap entries\n",
       "\n",
       "2. Calculating gaps between cars...\n",
       "Processing gaps for 20 drivers across 66 laps...\n",
       "Processing lap 66.0...\n",
       "Processing complete!\n",
-      "   - Gaps calculated in 5.84 seconds\n",
+      "   - Gaps calculated in 5.22 seconds\n",
       "   - Generated 1312 gap data points\n",
       "\n",
       "3. Processing and cleaning gap data...\n",
       "Calculating gap consistency across laps...\n",
       "Gap consistency calculation complete!\n",
-      "   - Gap consistency calculated in 0.44 seconds\n",
+      "   - Gap consistency calculated in 0.40 seconds\n",
       "\n",
       "4. Saving processed gap data...\n",
       "   - Saved to: ../../f1-strategy/data/processed/gaps_spain_2023_data.csv\n",
@@ -4189,7 +4212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 19,
    "id": "9e975db3",
    "metadata": {},
    "outputs": [],
@@ -4209,7 +4232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 20,
    "id": "b9360681",
    "metadata": {},
    "outputs": [],
@@ -4255,7 +4278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 21,
    "id": "919b88b0",
    "metadata": {},
    "outputs": [
@@ -4284,7 +4307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 22,
    "id": "b95444cf",
    "metadata": {},
    "outputs": [
@@ -4292,7 +4315,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\victo\\AppData\\Local\\Temp\\ipykernel_5588\\979259281.py:7: FutureWarning: \n",
+      "C:\\Users\\victo\\AppData\\Local\\Temp\\ipykernel_23888\\979259281.py:7: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `y` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -4339,7 +4362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 23,
    "id": "79d45e56",
    "metadata": {},
    "outputs": [
@@ -4347,7 +4370,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\victo\\AppData\\Local\\Temp\\ipykernel_5588\\1779473602.py:3: FutureWarning: \n",
+      "C:\\Users\\victo\\AppData\\Local\\Temp\\ipykernel_23888\\1779473602.py:3: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `y` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
