--- a/scripts/IS_agent/N02_degradation_time_rules.ipynb
+++ b/scripts/IS_agent/N02_degradation_time_rules.ipynb
@@ -345,7 +345,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "91b95152-b98f-480b-824f-deda57311480",
+       "ref": "5ff8d3db-7a19-4bb1-86c7-4b62b36bbbe0",
        "rows": [
         [
          "0",
@@ -1313,7 +1313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1331,13 +1331,7 @@
       "Processed data format: 16 features\n",
       "Created 339 sequences of 5 laps each\n",
       "Sequences by compound: {1: 158, 2: 147, 3: 34}\n",
-      "Using device: cuda\n",
-      "Global model loaded from: ../../outputs/week5/models\\tire_degradation_tcn.pth\n",
-      "Specialized model for compound 1 loaded\n",
-      "Specialized model for compound 2 loaded\n",
-      "Specialized model for compound 3 loaded\n",
-      "Models loaded: 1 global model and 3 specialized models\n",
-      "Prepared tensor for model: shape=torch.Size([339, 5, 16])\n"
+      "Using device: cuda\n"
      ]
     },
     {
@@ -1354,6 +1348,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Global model loaded from: ../../outputs/week5/models\\tire_degradation_tcn.pth\n",
+      "Specialized model for compound 1 loaded\n",
+      "Specialized model for compound 2 loaded\n",
+      "Specialized model for compound 3 loaded\n",
+      "Models loaded: 1 global model and 3 specialized models\n",
+      "Prepared tensor for model: shape=torch.Size([339, 5, 16])\n",
       "Generated ensemble predictions for 339 sequences\n",
       "Formatted results: 1017 predictions for 20 drivers\n",
       "Available drivers: [ 1  2  4 10 11 14 16 18 20 21 22 23 24 27 31 44 55 63 77 81]\n",
@@ -1363,64 +1363,64 @@
       "==================================================\n",
       "Using first predicted rate as current degradation: 1.4210000038146973\n",
       "Running rule engine...\n",
-      "Rule activated: predicted_high_degradation_alert\n",
-      "  - First predicted rate: 1.421 (threshold: > 0.2)\n",
-      "  - Tire age: 26 (threshold: > 8)\n",
       "Rule activated: high_degradation_pit_stop\n",
       "  - Degradation rate: 1.421 (threshold: 0.3)\n",
       "  - Tire age: 26 (threshold: 10)\n",
+      "Rule activated: predicted_high_degradation_alert\n",
+      "  - First predicted rate: 1.421 (threshold: > 0.2)\n",
+      "  - Tire age: 26 (threshold: > 8)\n",
       "\n",
       "Generated 2 recommendations:\n",
       "\n",
       "Recommendation 1:\n",
-      "Action: consider_pit\n",
-      "Confidence: 0.8\n",
-      "Explanation: Model predicts critical degradation in upcoming laps (predicted rate: 1.421s/lap). Consider pit stop strategy.\n",
-      "Priority: 2\n",
-      "Lap issued: 26\n",
-      "\n",
-      "Recommendation 2:\n",
       "Action: pit_stop\n",
       "Confidence: 0.8\n",
       "Explanation: High tire degradation rate detected (1.42 > 0.3) with significant tire age (26 laps)\n",
       "Priority: 2\n",
       "Lap issued: 26\n",
       "\n",
+      "Recommendation 2:\n",
+      "Action: consider_pit\n",
+      "Confidence: 0.8\n",
+      "Explanation: Model predicts critical degradation in upcoming laps (predicted rate: 1.421s/lap). Consider pit stop strategy.\n",
+      "Priority: 2\n",
+      "Lap issued: 26\n",
+      "\n",
       "Triggered rules:\n",
-      "- predicted_high_degradation_alert (Lap 26)\n",
       "- high_degradation_pit_stop (Lap 26)\n",
+      "- predicted_high_degradation_alert (Lap 26)\n",
       "\n",
       "==================================================\n",
       "TESTING DRIVER 44\n",
       "==================================================\n",
       "Using first predicted rate as current degradation: 1.1089999675750732\n",
       "Running rule engine...\n",
-      "Rule activated: predicted_high_degradation_alert\n",
-      "  - First predicted rate: 1.109 (threshold: > 0.2)\n",
-      "  - Tire age: 19 (threshold: > 8)\n",
       "Rule activated: high_degradation_pit_stop\n",
       "  - Degradation rate: 1.109 (threshold: 0.3)\n",
       "  - Tire age: 19 (threshold: 10)\n",
+      "Rule activated: predicted_high_degradation_alert\n",
+      "  - First predicted rate: 1.109 (threshold: > 0.2)\n",
+      "  - Tire age: 19 (threshold: > 8)\n",
       "\n",
       "Generated 2 recommendations:\n",
       "\n",
       "Recommendation 1:\n",
-      "Action: consider_pit\n",
-      "Confidence: 0.8\n",
-      "Explanation: Model predicts critical degradation in upcoming laps (predicted rate: 1.109s/lap). Consider pit stop strategy.\n",
-      "Priority: 2\n",
-      "Lap issued: 19\n",
-      "\n",
-      "Recommendation 2:\n",
       "Action: pit_stop\n",
       "Confidence: 0.8\n",
       "Explanation: High tire degradation rate detected (1.11 > 0.3) with significant tire age (19 laps)\n",
       "Priority: 2\n",
       "Lap issued: 19\n",
       "\n",
+      "Recommendation 2:\n",
+      "Action: consider_pit\n",
+      "Confidence: 0.8\n",
+      "Explanation: Model predicts critical degradation in upcoming laps (predicted rate: 1.109s/lap). Consider pit stop strategy.\n",
+      "Priority: 2\n",
+      "Lap issued: 19\n",
+      "\n",
       "Triggered rules:\n",
-      "- predicted_high_degradation_alert (Lap 19)\n",
       "- high_degradation_pit_stop (Lap 19)\n",
+      "- predicted_high_degradation_alert (Lap 19)\n",
       "\n",
       "==================================================\n",
       "TESTING DRIVER 16\n",
