--- a/scripts/IS_agent/N04_nlp_rules.ipynb
+++ b/scripts/IS_agent/N04_nlp_rules.ipynb
@@ -173,7 +173,7 @@
       "    • \"Box this lap for softs,\"\n",
       "  WEATHER:\n",
       "    • \"there's rain expected in 10 minutes\"\n",
-      "Analysis saved to ../../outputs/week4/json/radio_analysis_20250417_191753.json\n"
+      "Analysis saved to ../../outputs/week4/json/radio_analysis_20250418_164238.json\n"
      ]
     }
    ],
@@ -202,7 +202,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processing json from: ../../outputs/week4/json/radio_analysis_20250417_191753.json\n"
+      "Processing json from: ../../outputs/week4/json/radio_analysis_20250418_164238.json\n"
      ]
     }
    ],
@@ -671,7 +671,13 @@
       "================================================================================\n",
       "Radio message: 'I'm really struggling with grip, the rear feels terrible'\n",
       "\n",
-      "Processing message with NLP pipeline...\n",
+      "Processing message with NLP pipeline...\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\n",
       "Analyzing message: \"I'm really struggling with grip, the rear feels terrible\"\n",
       "\n",
@@ -683,8 +689,8 @@
       "  TECHNICAL_ISSUE:\n",
       "    • \"the\"\n",
       "    • \"rear feels terrible\"\n",
-      "Analysis saved to ../../outputs/week4/json/radio_analysis_20250417_191800.json\n",
-      "Analysis saved to: ../../outputs/week4/json/radio_analysis_20250417_191800.json\n",
+      "Analysis saved to ../../outputs/week4/json/radio_analysis_20250418_164247.json\n",
+      "Analysis saved to: ../../outputs/week4/json/radio_analysis_20250418_164247.json\n",
       "\n",
       "Analysis results:\n",
       "Sentiment: negative\n",
@@ -758,8 +764,8 @@
       "    • \"track is getting wet\"\n",
       "  WEATHER:\n",
       "    • \"rain starting\"\n",
-      "Analysis saved to ../../outputs/week4/json/radio_analysis_20250417_191807.json\n",
-      "Analysis saved to: ../../outputs/week4/json/radio_analysis_20250417_191807.json\n",
+      "Analysis saved to ../../outputs/week4/json/radio_analysis_20250418_164254.json\n",
+      "Analysis saved to: ../../outputs/week4/json/radio_analysis_20250418_164254.json\n",
       "\n",
       "Analysis results:\n",
       "Sentiment: neutral\n",
@@ -829,8 +835,8 @@
       "    • \"Safety\"\n",
       "  PIT_CALL:\n",
       "    • \"box box box\"\n",
-      "Analysis saved to ../../outputs/week4/json/radio_analysis_20250417_191813.json\n",
-      "Analysis saved to: ../../outputs/week4/json/radio_analysis_20250417_191813.json\n",
+      "Analysis saved to ../../outputs/week4/json/radio_analysis_20250418_164301.json\n",
+      "Analysis saved to: ../../outputs/week4/json/radio_analysis_20250418_164301.json\n",
       "\n",
       "Analysis results:\n",
       "Sentiment: negative\n",
