added rules generation, need to improve the radio ones

--- a/scripts/IS_agent/N03_lap_time_rules.ipynb
+++ b/scripts/IS_agent/N03_lap_time_rules.ipynb
@@ -1319,6 +1319,188 @@
     "This notebook extends our F1 Strategy Expert System with a critical dimension of analysis: lap time-based decision making, complementing the tire degradation rules implemented in Notebook N02.\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d21959d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from utils.N01_agent_setup import load_tire_predictions, process_radio_message\n",
+    "\n",
+    "\n",
+    "def analyze_all_drivers(\n",
+    "    race_data_path, \n",
+    "    models_path=None,\n",
+    "    lap_model_path=None,\n",
+    "    output_path=None\n",
+    "):\n",
+    "    \"\"\"\n",
+    "    Analiza la estrategia para todos los pilotos en momentos clave de la carrera.\n",
+    "    \n",
+    "    Función simplificada que procesa todos los pilotos y genera recomendaciones\n",
+    "    para cada uno en puntos estratégicos de la carrera.\n",
+    "    \n",
+    "    Args:\n",
+    "        race_data_path: Ruta al CSV de telemetría\n",
+    "        models_path: Ruta a modelos de degradación de neumáticos\n",
+    "        lap_model_path: Ruta al modelo de predicción de vueltas\n",
+    "        output_path: Ruta para guardar resultados (opcional)\n",
+    "    \n",
+    "    Returns:\n",
+    "        DataFrame con todas las recomendaciones\n",
+    "    \"\"\"\n",
+    "    print(f\"\\n{'='*80}\")\n",
+    "    print(f\"ANÁLISIS DE TODOS LOS PILOTOS\")\n",
+    "    print(f\"{'='*80}\")\n",
+    "    \n",
+    "    # Cargar datos de carrera\n",
+    "    race_data = pd.read_csv(race_data_path)\n",
+    "    print(f\"Datos cargados: {len(race_data)} filas\")\n",
+    "    \n",
+    "    # Obtener predicciones\n",
+    "    tire_predictions = None\n",
+    "    lap_predictions = None\n",
+    "    \n",
+    "    if models_path:\n",
+    "        try:\n",
+    "            compound_thresholds = {1: 6, 2: 12, 3: 25}\n",
+    "            tire_predictions = load_tire_predictions(race_data, models_path, compound_thresholds)\n",
+    "            print(f\"Predicciones de neumáticos generadas: {len(tire_predictions) if tire_predictions is not None else 0} filas\")\n",
+    "        except Exception as e:\n",
+    "            print(f\"Error generando predicciones de neumáticos: {str(e)}\")\n",
+    "    \n",
+    "    if lap_model_path:\n",
+    "        try:\n",
+    "            lap_predictions = load_lap_time_predictions(race_data, lap_model_path)\n",
+    "            print(f\"Predicciones de tiempo por vuelta generadas: {len(lap_predictions) if lap_predictions is not None else 0} filas\")\n",
+    "        except Exception as e:\n",
+    "            print(f\"Error generando predicciones de tiempo: {str(e)}\")\n",
+    "    \n",
+    "    # Ejemplo de mensaje de radio para todos los pilotos\n",
+    "    radio_message = \"Box this lap for softs, there's rain expected in 10 minutes\"\n",
+    "    json_path = process_radio_message(radio_message)\n",
+    "    \n",
+    "    # Total de vueltas\n",
+    "    total_laps = 66  # Valor predeterminado\n",
+    "    if 'LapNumber' in race_data.columns:\n",
+    "        total_laps = int(race_data['LapNumber'].max())\n",
+    "    elif 'TyreAge' in race_data.columns:\n",
+    "        total_laps = int(race_data['TyreAge'].max())\n",
+    "    \n",
+    "    # Puntos estratégicos para analizar\n",
+    "    strategic_points = [\n",
+    "        int(total_laps * 0.25),  # 25% de la carrera\n",
+    "        int(total_laps * 0.5),   # Media carrera\n",
+    "        int(total_laps * 0.75)   # 75% de la carrera\n",
+    "    ]\n",
+    "    \n",
+    "    # Procesar cada piloto\n",
+    "    all_recommendations = []\n",
+    "    drivers = sorted(race_data['DriverNumber'].unique())\n",
+    "    \n",
+    "    for driver_number in drivers:\n",
+    "        print(f\"\\nAnalizando piloto #{driver_number}\")\n",
+    "        \n",
+    "        # Procesar cada punto estratégico\n",
+    "        for lap in strategic_points:\n",
+    "            print(f\"  Vuelta {lap}/{total_laps}\")\n",
+    "            \n",
+    "            # Crear el motor de reglas integrado\n",
+    "            engine = F1CompleteStrategyEngine()\n",
+    "            engine.reset()\n",
+    "            \n",
+    "            # Transformar datos de neumáticos\n",
+    "            if tire_predictions is not None:\n",
+    "                try:\n",
+    "                    tire_facts = transform_tire_predictions(tire_predictions, driver_number)\n",
+    "                    if tire_facts:\n",
+    "                        # Asegurar que no hay valores None en campos obligatorios\n",
+    "                        for fact_type in ['degradation', 'telemetry']:\n",
+    "                            if fact_type in tire_facts and tire_facts[fact_type] is not None:\n",
+    "                                fact = tire_facts[fact_type]\n",
+    "                                # Reemplazar None con valores por defecto\n",
+    "                                for field_name, field_value in fact.items():\n",
+    "                                    if field_value is None:\n",
+    "                                        fact[field_name] = 0.0 if isinstance(field_value, float) else 0\n",
+    "                                \n",
+    "                                engine.declare(fact)\n",
+    "                except Exception as e:\n",
+    "                    print(f\"    Error transformando datos de neumáticos: {str(e)}\")\n",
+    "            \n",
+    "            # Transformar datos de tiempos por vuelta\n",
+    "            if lap_predictions is not None:\n",
+    "                try:\n",
+    "                    lap_facts = transform_lap_time_predictions(lap_predictions, driver_number)\n",
+    "                    if lap_facts and 'telemetry' in lap_facts:\n",
+    "                        telemetry = lap_facts['telemetry']\n",
+    "                        # Asegurar valores válidos\n",
+    "                        if 'lap_time' in telemetry and telemetry['lap_time'] is None:\n",
+    "                            if telemetry.get('predicted_lap_time') is not None:\n",
+    "                                telemetry['lap_time'] = telemetry['predicted_lap_time']\n",
+    "                            else:\n",
+    "                                telemetry['lap_time'] = 0.0\n",
+    "                        \n",
+    "                        engine.declare(telemetry)\n",
+    "                except Exception as e:\n",
+    "                    print(f\"    Error transformando datos de tiempo: {str(e)}\")\n",
+    "            \n",
+    "            # Crear fact de estado de carrera\n",
+    "            race_phase = \"start\" if lap < total_laps * 0.25 else \"end\" if lap > total_laps * 0.75 else \"mid\"\n",
+    "            race_status = RaceStatusFact(\n",
+    "                lap=lap,\n",
+    "                total_laps=total_laps,\n",
+    "                race_phase=race_phase,\n",
+    "                track_status=\"clear\"\n",
+    "            )\n",
+    "            engine.declare(race_status)\n",
+    "            \n",
+    "            # Añadir análisis de radio si disponible\n",
+    "            if json_path:\n",
+    "                try:\n",
+    "                    radio_fact = transform_radio_analysis(json_path)\n",
+    "                    engine.declare(radio_fact)\n",
+    "                except Exception as e:\n",
+    "                    print(f\"    Error transformando datos de radio: {str(e)}\")\n",
+    "            \n",
+    "            # Ejecutar el motor de reglas\n",
+    "            engine.run()\n",
+    "            \n",
+    "            # Obtener recomendaciones\n",
+    "            recommendations = engine.get_recommendations()\n",
+    "            \n",
+    "            # Añadir metadatos a las recomendaciones\n",
+    "            for rec in recommendations:\n",
+    "                rec['DriverNumber'] = driver_number\n",
+    "                rec['LapNumber'] = lap\n",
+    "                rec['RacePhase'] = race_phase\n",
+    "            \n",
+    "            all_recommendations.extend(recommendations)\n",
+    "            print(f\"    Generadas {len(recommendations)} recomendaciones\")\n",
+    "    \n",
+    "    # Convertir a DataFrame\n",
+    "    if all_recommendations:\n",
+    "        results_df = pd.DataFrame(all_recommendations)\n",
+    "        \n",
+    "        # Guardar resultados si se especificó ruta\n",
+    "        if output_path:\n",
+    "            results_df.to_csv(output_path, index=False)\n",
+    "            print(f\"\\nResultados guardados en: {output_path}\")\n",
+    "        \n",
+    "        print(f\"\\nTotal de recomendaciones: {len(results_df)}\")\n",
+    "        return results_df\n",
+    "    else:\n",
+    "        print(\"No se generaron recomendaciones\")\n",
+    "        return pd.DataFrame()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
