fiex activation of radio rules and gap rules

--- a/scripts/IS_agent/N05_gap_rules.ipynb
+++ b/scripts/IS_agent/N05_gap_rules.ipynb
@@ -348,78 +348,135 @@
     "# ------------------------------------------------------------------------------------\n",
     "def calculate_all_gaps(laps_data):\n",
     "    \"\"\"\n",
-    "    Calculates the gaps for all drivers at the completion of each lap. It includes:\n",
-    "    - The gap to the leader (difference in 'Time' at lap completion)\n",
-    "    - The gap relative to the car directly ahead (difference between consecutive gaps)\n",
-    "    - The gap relative to the car directly behind\n",
-    "    - Flags for undercut window (<2.5 seconds) and DRS window (<1.0 second)\n",
+    "    Calculates the gaps for all drivers at the completion of each lap.\n",
     "\n",
     "    Args:\n",
-    "        laps_data (DataFrame): Lap data provided by FastF1.\n",
+    "        laps_data (DataFrame): Lap data from FastF1 or another source\n",
     "\n",
     "    Returns:\n",
-    "        DataFrame: Processed gap data with all calculated metrics.\n",
+    "        DataFrame: Processed gap data with all calculated metrics\n",
     "    \"\"\"\n",
-    "    gap_results = []  # This list will store the results for each lap and driver\n",
+    "    gap_results = []\n",
     "\n",
-    "    # Get the unique drivers and sorted lap numbers from the lap data\n",
-    "    drivers = laps_data['Driver'].unique()\n",
-    "    lap_numbers = sorted(laps_data['LapNumber'].unique())\n",
+    "    # Check if we need to use 'DriverNumber' instead of 'Driver'\n",
+    "    driver_column = 'Driver' if 'Driver' in laps_data.columns else 'DriverNumber'\n",
     "\n",
-    "    print(f\"Processing gaps for {len(drivers)} drivers across {len(lap_numbers)} laps...\")\n",
+    "    print(f\"Using '{driver_column}' as driver identifier column\")\n",
     "\n",
-    "    # Process each lap one by one\n",
+    "    # Get unique drivers and sorted lap numbers from the lap data\n",
+    "    drivers = laps_data[driver_column].unique()\n",
+    "    lap_numbers = sorted(laps_data['LapNumber'].unique(\n",
+    "    )) if 'LapNumber' in laps_data.columns else sorted(laps_data['TyreAge'].unique())\n",
+    "    lap_column = 'LapNumber' if 'LapNumber' in laps_data.columns else 'TyreAge'\n",
+    "\n",
+    "    print(\n",
+    "        f\"Processing gaps for {len(drivers)} drivers across {len(lap_numbers)} laps using '{lap_column}' column...\")\n",
+    "\n",
+    "    # Function to get the gap at lap completion\n",
+    "    def get_gap_at_lap_completion(driver_id, lap_num):\n",
+    "        # Filter for specific driver and lap\n",
+    "        driver_lap = laps_data[(laps_data[driver_column] == driver_id) & (\n",
+    "            laps_data[lap_column] == lap_num)]\n",
+    "        if driver_lap.empty:\n",
+    "            return None\n",
+    "\n",
+    "        # Get reference time - either 'Time' column or calculated from 'LapTime'\n",
+    "        if 'Time' in driver_lap.columns:\n",
+    "            driver_finish_time = driver_lap.iloc[0]['Time']\n",
+    "        elif 'LapTime' in driver_lap.columns:\n",
+    "            # If we only have lap time, use that as a proxy\n",
+    "            driver_finish_time = driver_lap.iloc[0]['LapTime']\n",
+    "        else:\n",
+    "            return None\n",
+    "\n",
+    "        # Get all laps at this lap number\n",
+    "        lap_group = laps_data[laps_data[lap_column] == lap_num]\n",
+    "\n",
+    "        # Get minimum time for this lap (leader's time)\n",
+    "        if 'Time' in lap_group.columns:\n",
+    "            leader_time = lap_group['Time'].min()\n",
+    "        elif 'LapTime' in lap_group.columns:\n",
+    "            leader_time = lap_group['LapTime'].min()\n",
+    "        else:\n",
+    "            return None\n",
+    "\n",
+    "        # Calculate gap to leader\n",
+    "        gap_to_leader = driver_finish_time - leader_time\n",
+    "\n",
+    "        # Handle timedelta objects if needed\n",
+    "        if hasattr(gap_to_leader, 'total_seconds'):\n",
+    "            gap_to_leader = gap_to_leader.total_seconds()\n",
+    "\n",
+    "        return gap_to_leader\n",
+    "\n",
+    "    # Process each lap\n",
     "    for lap_num in lap_numbers:\n",
     "        print(f\"Processing lap {lap_num}...\", end='\\r')\n",
-    "        \n",
-    "        # Create a dictionary to store the computed gap to the leader for each driver on this lap\n",
+    "\n",
+    "        # Dictionary to store gap to leader for each driver\n",
     "        lap_positions = {}\n",
+    "\n",
+    "        # Calculate gap to leader for each driver\n",
     "        for driver in drivers:\n",
-    "            gap_to_leader = get_gap_at_lap_completion(driver, lap_num, laps_data)\n",
+    "            gap_to_leader = get_gap_at_lap_completion(driver, lap_num)\n",
     "            if gap_to_leader is not None:\n",
-    "                # Store the gap only if data exists for this driver on this lap\n",
     "                lap_positions[driver] = gap_to_leader\n",
     "\n",
-    "        # Order the drivers by their gap to the leader. The leader will have a gap of 0.\n",
+    "        # Sort drivers by gap to leader\n",
     "        sorted_drivers = sorted(lap_positions.items(), key=lambda x: x[1])\n",
     "\n",
-    "        # For each driver, calculate additional gap metrics relative to the car ahead and behind\n",
+    "        # For each driver, calculate additional gap metrics\n",
     "        for i, (driver, gap_to_leader) in enumerate(sorted_drivers):\n",
-    "            # Retrieve additional driver details (like car number and team) from the lap data\n",
-    "            driver_info = laps_data[laps_data['Driver'] == driver].iloc[0]\n",
-    "            driver_number = driver_info['DriverNumber']\n",
+    "            # Get driver info (driver number and team)\n",
+    "            driver_info = laps_data[laps_data[driver_column] == driver].iloc[0]\n",
     "\n",
-    "            # Initialize default values for gaps and adjacent car information\n",
+    "            # Initialize default values\n",
+    "            driver_number = driver\n",
+    "            if driver_column == 'Driver' and 'DriverNumber' in driver_info:\n",
+    "                driver_number = driver_info['DriverNumber']\n",
+    "\n",
+    "            # Initialize gap values\n",
     "            gap_ahead = None\n",
     "            car_ahead = None\n",
     "            gap_behind = None\n",
     "            car_behind = None\n",
+    "            car_ahead_number = None\n",
+    "            car_behind_number = None\n",
     "\n",
-    "            # If this is not the leader, calculate the gap relative to the car ahead\n",
+    "            # Calculate gap to car ahead\n",
     "            if i > 0:\n",
     "                car_ahead = sorted_drivers[i-1][0]\n",
-    "                # The gap to the car ahead is the difference between the current driver's gap and the one immediately ahead\n",
     "                gap_ahead = gap_to_leader - sorted_drivers[i-1][1]\n",
-    "                car_ahead_info = laps_data[laps_data['Driver'] == car_ahead].iloc[0]\n",
-    "                car_ahead_number = car_ahead_info['DriverNumber']\n",
-    "            else:\n",
-    "                car_ahead_number = None  # No car ahead for the leader\n",
     "\n",
-    "            # If this is not the last driver, calculate the gap to the car behind\n",
+    "                # Get car ahead number\n",
+    "                if car_ahead in laps_data[driver_column].values:\n",
+    "                    car_ahead_info = laps_data[laps_data[driver_column]\n",
+    "                                               == car_ahead].iloc[0]\n",
+    "                    if driver_column == 'Driver' and 'DriverNumber' in car_ahead_info:\n",
+    "                        car_ahead_number = car_ahead_info['DriverNumber']\n",
+    "                    else:\n",
+    "                        car_ahead_number = car_ahead\n",
+    "\n",
+    "            # Calculate gap to car behind\n",
     "            if i < len(sorted_drivers) - 1:\n",
     "                car_behind = sorted_drivers[i+1][0]\n",
     "                gap_behind = sorted_drivers[i+1][1] - gap_to_leader\n",
-    "                car_behind_info = laps_data[laps_data['Driver'] == car_behind].iloc[0]\n",
-    "                car_behind_number = car_behind_info['DriverNumber']\n",
-    "            else:\n",
-    "                car_behind_number = None  # No car behind for the last driver\n",
     "\n",
-    "            # Append the computed data for this driver and lap into the results list\n",
+    "                # Get car behind number\n",
+    "                if car_behind in laps_data[driver_column].values:\n",
+    "                    car_behind_info = laps_data[laps_data[driver_column]\n",
+    "                                                == car_behind].iloc[0]\n",
+    "                    if driver_column == 'Driver' and 'DriverNumber' in car_behind_info:\n",
+    "                        car_behind_number = car_behind_info['DriverNumber']\n",
+    "                    else:\n",
+    "                        car_behind_number = car_behind\n",
+    "\n",
+    "            # Create result entry\n",
     "            gap_results.append({\n",
     "                'LapNumber': lap_num,\n",
     "                'Driver': driver,\n",
     "                'DriverNumber': driver_number,\n",
-    "                'Position': i + 1,  # Position is 1-indexed (first is 1, not 0)\n",
+    "                'Position': i + 1,  # Position is 1-indexed\n",
     "                'GapToLeader': gap_to_leader,\n",
     "                'CarAhead': car_ahead,\n",
     "                'CarAheadNumber': car_ahead_number,\n",
@@ -427,12 +484,11 @@
     "                'CarBehind': car_behind,\n",
     "                'CarBehindNumber': car_behind_number,\n",
     "                'GapToCarBehind': gap_behind,\n",
-    "                'InUndercutWindow': gap_ahead is not None and gap_ahead < 2.5,  # True if gap ahead is less than 2.5 seconds\n",
-    "                'InDRSWindow': gap_ahead is not None and gap_ahead < 1.0       # True if gap ahead is less than 1.0 seconds\n",
+    "                'InUndercutWindow': gap_ahead is not None and gap_ahead < 2.5,\n",
+    "                'InDRSWindow': gap_ahead is not None and gap_ahead < 1.0\n",
     "            })\n",
-    "            \n",
+    "\n",
     "    print(\"\\nProcessing complete!\")\n",
-    "    # Convert the list of gap results into a Pandas DataFrame and return it\n",
     "    return pd.DataFrame(gap_results)\n",
     "\n",
     "\n"
@@ -465,7 +521,8 @@
      "output_type": "stream",
      "text": [
       "Calculating gaps at lap completion points...\n",
-      "Processing gaps for 20 drivers across 66 laps...\n",
+      "Using 'Driver' as driver identifier column\n",
+      "Processing gaps for 20 drivers across 66 laps using 'LapNumber' column...\n",
       "Processing lap 66.0...\n",
       "Processing complete!\n"
      ]
@@ -2003,7 +2060,13 @@
       "core           INFO \tLoading data for Spanish Grand Prix - Race [v3.1.6]\n",
       "INFO:fastf1.fastf1.core:Loading data for Spanish Grand Prix - Race [v3.1.6]\n",
       "req            INFO \tUsing cached data for session_info\n",
-      "INFO:fastf1.fastf1.req:Using cached data for session_info\n",
+      "INFO:fastf1.fastf1.req:Using cached data for session_info\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "req            INFO \tUsing cached data for driver_info\n",
       "INFO:fastf1.fastf1.req:Using cached data for driver_info\n",
       "req            INFO \tUsing cached data for session_status_data\n",
@@ -2014,7 +2077,10 @@
       "INFO:fastf1.fastf1.req:Using cached data for track_status_data\n",
       "req            INFO \tUsing cached data for _extended_timing_data\n",
       "INFO:fastf1.fastf1.req:Using cached data for _extended_timing_data\n",
-      "req            INFO \tUsing cached data for timing_app_data\n"
+      "req            INFO \tUsing cached data for timing_app_data\n",
+      "INFO:fastf1.fastf1.req:Using cached data for timing_app_data\n",
+      "core           INFO \tProcessing timing data...\n",
+      "INFO:fastf1.fastf1.core:Processing timing data...\n"
      ]
     },
     {
@@ -2023,7 +2089,7 @@
      "text": [
       "Starting comprehensive gap analysis...\n",
       "=== Gap Analysis for Spain 2023 (R) ===\n",
-      "Started: 2025-04-18 17:03:15\n",
+      "Started: 2025-04-23 10:27:44\n",
       "\n",
       "1. Loading session data...\n"
      ]
@@ -2032,9 +2098,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:fastf1.fastf1.req:Using cached data for timing_app_data\n",
-      "core           INFO \tProcessing timing data...\n",
-      "INFO:fastf1.fastf1.core:Processing timing data...\n",
       "req            INFO \tUsing cached data for car_data\n",
       "INFO:fastf1.fastf1.req:Using cached data for car_data\n",
       "req            INFO \tUsing cached data for position_data\n",
@@ -2055,16 +2118,17 @@
       "   - Loaded 1312 lap entries\n",
       "\n",
       "2. Calculating gaps between cars...\n",
-      "Processing gaps for 20 drivers across 66 laps...\n",
+      "Using 'Driver' as driver identifier column\n",
+      "Processing gaps for 20 drivers across 66 laps using 'LapNumber' column...\n",
       "Processing lap 66.0...\n",
       "Processing complete!\n",
-      "   - Gaps calculated in 5.22 seconds\n",
+      "   - Gaps calculated in 5.24 seconds\n",
       "   - Generated 1312 gap data points\n",
       "\n",
       "3. Processing and cleaning gap data...\n",
       "Calculating gap consistency across laps...\n",
       "Gap consistency calculation complete!\n",
-      "   - Gap consistency calculated in 0.40 seconds\n",
+      "   - Gap consistency calculated in 0.42 seconds\n",
       "\n",
       "4. Saving processed gap data...\n",
       "   - Saved to: ../../f1-strategy/data/processed/gaps_spain_2023_data.csv\n",
@@ -2328,18 +2392,18 @@
       "         * Generated 1 recommendations (filtered from 1)\n",
       "         * Rules triggered: ['defensive_pit_stop']\n",
       "       - Analyzing lap 10...\n",
-      "Rule activated: defensive_pit_stop\n",
-      "  - Driver: 31\n",
-      "  - Current lap: 10 (early stint)\n",
-      "  - Gap behind: 0.63s\n",
-      "  - Consistent laps in this window: 10\n",
       "Rule activated: strategic_overcut\n",
       "  - Driver: 31\n",
       "  - Current lap: 10 (early stint)\n",
       "  - Gap ahead: 2.49s\n",
       "  - Consistent laps in this window: 5\n",
+      "Rule activated: defensive_pit_stop\n",
+      "  - Driver: 31\n",
+      "  - Current lap: 10 (early stint)\n",
+      "  - Gap behind: 0.63s\n",
+      "  - Consistent laps in this window: 10\n",
       "         * Generated 2 recommendations (filtered from 2)\n",
-      "         * Rules triggered: ['defensive_pit_stop', 'strategic_overcut']\n",
+      "         * Rules triggered: ['strategic_overcut', 'defensive_pit_stop']\n",
       "       - Analyzing lap 14...\n",
       "Rule activated: traffic_management\n",
       "  - Driver: 31\n",
@@ -2382,18 +2446,18 @@
       "         * Generated 1 recommendations (filtered from 1)\n",
       "         * Rules triggered: ['defensive_pit_stop']\n",
       "       - Analyzing lap 31...\n",
-      "Rule activated: defensive_pit_stop\n",
-      "  - Driver: 31\n",
-      "  - Current lap: 31 (mid stint)\n",
-      "  - Gap behind: 1.08s\n",
-      "  - Consistent laps in this window: 31\n",
       "Rule activated: strategic_overcut\n",
       "  - Driver: 31\n",
       "  - Current lap: 31 (mid stint)\n",
       "  - Gap ahead: 2.07s\n",
       "  - Consistent laps in this window: 5\n",
+      "Rule activated: defensive_pit_stop\n",
+      "  - Driver: 31\n",
+      "  - Current lap: 31 (mid stint)\n",
+      "  - Gap behind: 1.08s\n",
+      "  - Consistent laps in this window: 31\n",
       "         * Generated 2 recommendations (filtered from 2)\n",
-      "         * Rules triggered: ['defensive_pit_stop', 'strategic_overcut']\n",
+      "         * Rules triggered: ['strategic_overcut', 'defensive_pit_stop']\n",
       "       - Analyzing lap 35...\n",
       "         * No recommendations for this lap\n",
       "       - Analyzing lap 39...\n",
@@ -2405,18 +2469,18 @@
       "         * Generated 1 recommendations (filtered from 1)\n",
       "         * Rules triggered: ['traffic_management']\n",
       "       - Analyzing lap 43...\n",
-      "Rule activated: defensive_pit_stop\n",
-      "  - Driver: 31\n",
-      "  - Current lap: 43 (mid stint)\n",
-      "  - Gap behind: 1.15s\n",
-      "  - Consistent laps in this window: 6\n",
       "Rule activated: strategic_overcut\n",
       "  - Driver: 31\n",
       "  - Current lap: 43 (mid stint)\n",
       "  - Gap ahead: 3.02s\n",
       "  - Consistent laps in this window: 5\n",
+      "Rule activated: defensive_pit_stop\n",
+      "  - Driver: 31\n",
+      "  - Current lap: 43 (mid stint)\n",
+      "  - Gap behind: 1.15s\n",
+      "  - Consistent laps in this window: 6\n",
       "         * Generated 2 recommendations (filtered from 2)\n",
-      "         * Rules triggered: ['defensive_pit_stop', 'strategic_overcut']\n",
+      "         * Rules triggered: ['strategic_overcut', 'defensive_pit_stop']\n",
       "       - Analyzing lap 47...\n",
       "         * No significant gap changes. Skipping detailed analysis.\n",
       "       - Analyzing lap 48...\n",
@@ -4035,18 +4099,18 @@
       "  - Current lap: 47 (mid stint)\n",
       "  - Position: 18\n",
       "  - Gap to leader: 105.92s\n",
-      "Rule activated: defensive_pit_stop\n",
-      "  - Driver: 2\n",
-      "  - Current lap: 47 (mid stint)\n",
-      "  - Gap behind: 0.64s\n",
-      "  - Consistent laps in this window: 3\n",
       "Rule activated: strategic_overcut\n",
       "  - Driver: 2\n",
       "  - Current lap: 47 (mid stint)\n",
       "  - Gap ahead: 3.08s\n",
       "  - Consistent laps in this window: 10\n",
+      "Rule activated: defensive_pit_stop\n",
+      "  - Driver: 2\n",
+      "  - Current lap: 47 (mid stint)\n",
+      "  - Gap behind: 0.64s\n",
+      "  - Consistent laps in this window: 3\n",
       "         * Generated 3 recommendations (filtered from 3)\n",
-      "         * Rules triggered: ['traffic_management', 'defensive_pit_stop', 'strategic_overcut']\n",
+      "         * Rules triggered: ['traffic_management', 'strategic_overcut', 'defensive_pit_stop']\n",
       "       - Analyzing lap 48...\n",
       "Rule activated: traffic_management\n",
       "  - Driver: 2\n",
@@ -4315,7 +4379,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\victo\\AppData\\Local\\Temp\\ipykernel_23888\\979259281.py:7: FutureWarning: \n",
+      "C:\\Users\\victo\\AppData\\Local\\Temp\\ipykernel_4116\\979259281.py:7: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `y` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -4370,7 +4434,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\victo\\AppData\\Local\\Temp\\ipykernel_23888\\1779473602.py:3: FutureWarning: \n",
+      "C:\\Users\\victo\\AppData\\Local\\Temp\\ipykernel_4116\\1779473602.py:3: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `y` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
